# shellenv

./: Cargo.toml  README.md  env.template
src/: main.rs  parser.rs
