[package]
name = "shellenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
nom = "7.1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# use "install -s" to strip the binary
strip = false
